--- a/Technical/src/main/webapp/WEB-INF/localization/messages_ru.properties
+++ b/Technical/src/main/webapp/WEB-INF/localization/messages_ru.properties
@@ -75,3 +75,7 @@ User_groups=\u0413\u0440\u0443\u043F\u043F\u044B
 Verb=Глагол
 Adjective=Прилагательное
 Preferences=Настройки
+Go=Go
+Message=Message
+Wrong_kanji=Wrong kanji
+Quiz=Quiz
