--- a/Technical/src/main/webapp/WEB-INF/localization/messages_jp.properties
+++ b/Technical/src/main/webapp/WEB-INF/localization/messages_jp.properties
@@ -75,3 +75,7 @@ User_groups=User groups
 Verb=Verb
 Adjective=Adjective
 Preferences=Preferences
+Go=Go
+Message=Message
+Wrong_kanji=Wrong kanji
+Quiz=Quiz
